ucs-test (5.0.136-6) unstable; urgency=medium

  * 52_s4connector/100sync_gpo_ntsecurity_descriptor: udm cli is case
    sensitive. The DN is now used in the exact case (Bug #37633)

 -- Stefan Gohmann <gohmann@univention.de>  Wed, 18 Mar 2015 10:49:10 +0100

ucs-test (5.0.136-5) unstable; urgency=low

  * Bug #33495, Bug #32244: 10_ldap/45replication_modrdn: Stop S4C

 -- Philipp Hahn <hahn@univention.de>  Wed, 18 Mar 2015 10:19:10 +0100

ucs-test (5.0.136-4) unstable; urgency=medium

  * 10_ldap/05K5KEY_userexpiry: limit test to DC master (Bug #38060)

 -- Stefan Gohmann <gohmann@univention.de>  Wed, 18 Mar 2015 05:51:01 +0100

ucs-test (5.0.136-3) unstable; urgency=medium

  * 10_ldap/05K5KEY_userexpiry: Added test case for K5KEY / userexpiry
    (Bug #38060)

 -- Stefan Gohmann <gohmann@univention.de>  Tue, 17 Mar 2015 12:20:39 +0100

ucs-test (5.0.136-2) unstable; urgency=low

  * Bug #31792: 20/43_installed_apps_check_packages_available_for_i386

 -- Philipp Hahn <hahn@univention.de>  Mon, 16 Mar 2015 14:57:44 +0100

ucs-test (5.0.136-1) unstable; urgency=low

  * Bug #37602: correct typo apptest tag 02virus00basic

 -- Ammar Najjar <najjar@univention.de>  Mon, 16 Mar 2015 10:24:18 +0100

ucs-test (5.0.135-1) unstable; urgency=low

  * Bug #37599: add sleep before reloading amavis and postfix 02virus00basic

 -- Ammar Najjar <najjar@univention.de>  Mon, 16 Mar 2015 09:10:14 +0100

ucs-test (5.0.134-1) unstable; urgency=low

  * Bug #38017: disable the test temporarily' 01_all_roles_removal

 -- Ammar Najjar <najjar@univention.de>  Thu, 12 Mar 2015 10:49:12 +0100

ucs-test (5.0.133-2) unstable; urgency=low

  * Bug #37485: Added two tests for the umc-webserver

 -- Alexander Kramer <kramer@univention.de>  Thu, 12 Mar 2015 08:49:54 +0100

ucs-test (5.0.133-1) unstable; urgency=low

  * Bug #37998: disable the test temporarily' 000create_remove_object
  * Bug #38000: disable the test temporarily' 110sync_create_ad_delete_ucs_user